# agentic-ai-backend

./: .gitignore  README.md  pyproject.toml  test.py
app/: main.py
app/config/: setting.py
app/core/: auth_dependencies.py  dependencies.py
app/db/: session.py
app/graph/: builder.py  routers.py  state.py
app/graph/nodes/: context_builder.py  generate.py  pii.py  prompt_guard.py  query_rewrite.py  rerank_node.py  retrieve_node.py
app/guardrails/: pii_masking_service.py  prompt_injection_service.py
app/models/: refresh_token.py  user.py
app/nodes/: query_rewrite_node.py
app/prompts/: generate_prompt.py  rewrite_user_prompt.py
app/pydanticModels/: models.py
app/routes/: auth.py  ingestion.py  search.py
app/schemas/: auth.py
app/security/: jwt.py  password.py
app/services/: auth_service.py  chunking_service.py  context_builder_service.py  embedding_service.py  graph_service.py  ingestion_service.py  llm_service.py  rerank_service.py  search_service.py  sparse_embedding_service.py  vector_service.py
app/tasks/: broker.py  document_task.py
app/utils/: file_storage.py  helper.py
