[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.6.2",
    "asyncpg>=0.31.0",
    "cohere>=7.0.5",
    "fastapi>=0.138.0",
    "fastembed>=0.8.0",
    "greenlet>=3.5.2",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-litellm>=0.7.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.6",
    "langsmith>=0.9.1",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "taskiq>=0.12.4",
    "taskiq-aio-pika>=0.6.0",
    "uvicorn>=0.49.0",
]
